--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-pandas
+pandas==1.3.5
 flask==2.0.0
-nltk
-tensorflow
+nltk==3.6.7
+tensorflow==2.7.0
 spacy==2.3.7
-IPython
-numpy
-pickleshare
-matplotlib
-seaborn
-keras
-html5lib
-wordcloud
+IPython==8.0.1
+numpy==1.22.1
+pickleshare==0.7.5
+keras==2.7.0
